create teams features for 2022

--- a/jupyter_notebooks/prepare_dataset.ipynb
+++ b/jupyter_notebooks/prepare_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "0.8362068965517241"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +738,7 @@
        "[1121 rows x 2208 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1088,7 @@
        "[8 rows x 2204 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,19 +1099,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.to_csv(\"../data/train_data/dataset.csv\", index=False)"
+    "teams_in_22 = pd.read_csv(\"../data/world_cup_2022_data/groups_of_2022.csv\")\n",
+    "teams_in_22_list: list = teams_in_22[\"country\"].tolist()\n",
+    "\n",
+    "players_data = pd.read_csv(\"../data/players_data/players_all_prepared.csv\")\n",
+    "players_data\n",
+    "players_data[\"year\"].unique()\n",
+    "\n",
+    "\n",
+    "# drop all the rows that are not in the year 2023\n",
+    "players_data = players_data[players_data[\"year\"] == 2023]\n",
+    "players_data\n",
+    "\n",
+    "# group by nationality_name\n",
+    "grouped_players = players_data.groupby([\"nationality_name\", \"nation_position\"]).mean()\n",
+    "grouped_players\n",
+    "grouped_players.drop(\"year\", axis=1, inplace=True)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "matches.reset_index(drop=True, inplace=True)\n",
+    "country_data_for_2022 = pd.DataFrame()\n",
+    "lookup_table = pd.DataFrame()\n",
+    "position_record = pd.DataFrame()\n",
+    "for country in teams_in_22_list:\n",
+    "    for pos in all_positions:\n",
+    "        # get the group of players for the country and position\n",
+    "        try:\n",
+    "            position_record = pd.DataFrame(grouped_players.loc[country, pos])\n",
+    "            position_record = position_record.T\n",
+    "        except:\n",
+    "            position_record = pd.DataFrame(np.zeros((1,grouped_players.columns.shape[0])), columns=grouped_players.columns)\n",
+    "        position_record.columns = pos + \"_\" + position_record.columns\n",
+    "        # position_record[\"country\"] = country\n",
+    "        position_record.reset_index(drop=True, inplace=True)\n",
+    "        old_cols = country_data_for_2022.columns\n",
+    "        country_data_for_2022 = pd.concat([country_data_for_2022, position_record], axis=1, ignore_index=True)\n",
+    "        country_data_for_2022.columns = old_cols.tolist() + position_record.columns.tolist()\n",
+    "        position_record = pd.DataFrame()\n",
+    "    # add the country name to the dataframe\n",
+    "    country_data_for_2022[\"country\"] = country\n",
+    "    lookup_table = pd.concat([lookup_table, country_data_for_2022], axis=0, ignore_index=True)\n",
+    "    country_data_for_2022 = pd.DataFrame()\n",
+    "lookup_table.to_csv(\"../data/world_cup_2022_data/teams_features.csv\", index=False)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
