remove non-used commented lines

--- a/jupyter_notebooks/prepare_dataset.ipynb
+++ b/jupyter_notebooks/prepare_dataset.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "# import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as plt\n",
     "import glob\n",
     "import os\n",
     "import warnings\n",
@@ -275,12 +275,9 @@
     "    match_dataframe.loc[0, \"2nd_team\"] = match[\"2nd_team\"]\n",
     "    match_dataframe.loc[0, \"year\"] = match[\"year\"]\n",
     "    match_dataframe.loc[0, \"net_score\"] = match[\"net_score\"]\n",
-    "    # print(match_dataframe)\n",
     "    counter+=1\n",
     "    for pos in all_positions:\n",
-    "        # new_row = pd.DataFrame()\n",
     "        try:\n",
-    "            # Get players data for first team\n",
     "            plyrs_record1 = pd.DataFrame(grouped_players.loc[first_team, year, pos])\n",
     "            plyrs_record2 = pd.DataFrame(grouped_players.loc[second_team, year, pos])\n",
     "            plyrs_record1 = plyrs_record1.T.reset_index(drop=True)\n",
@@ -294,17 +291,7 @@
     "        plyrs_record1.columns = pos + \"_\" + plyrs_record1.columns + \"_1st\"\n",
     "        plyrs_record2.columns = pos + \"_\" + plyrs_record2.columns + \"_2nd\"\n",
     "        match_dataframe = pd.concat([match_dataframe, plyrs_record1, plyrs_record2], axis=1)\n",
-    "        # dataset_cols = dataset.columns\n",
-    "        # final_ds = pd.concat([pd.DataFrame(dataset.loc[i]).T, plyrs_record2], axis=1, ignore_index=True)\n",
-    "        # final_ds = pd.concat([pd.DataFrame(dataset.loc[i]).T, plyrs_record1], axis=1, ignore_index=True)\n",
-    "        # final_ds.columns = dataset_cols.tolist() + plyrs_record2.columns.tolist() + plyrs_record1.columns.tolist()\n",
-    "        # print(new_row)\n",
-    "    # dataset = pd.concat([dataset, new_row], axis=0, ignore_index=True)\n",
-    "        # break\n",
-    "    dataset = pd.concat([dataset, match_dataframe], axis=0, ignore_index=True)\n",
-    "    # dataset = pd.concat([dataset, pd.DataFrame(match).T], axis=0, ignore_index=True)\n",
-    "\n",
-    "    \n",
+    "    dataset = pd.concat([dataset, match_dataframe], axis=0, ignore_index=True)  \n",
     "        \n",
     "        \n",
     "        \n",
